# flockwave-spec

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  MANIFEST.in  README.md  book.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tbump.toml
.agents/skills/add-new-message/: SKILL.md
.github/workflows/: pytest.yml
doc/: antora.yml  protocol.md
doc/examples/: notification_ASYNC-RESP.json  notification_ASYNC-ST.json  notification_ASYNC-TIMEOUT.json  notification_CMD-RESP.json  notification_CMD-TIMEOUT.json  notification_CONN-DEL.json  notification_OBJ-DEL.json  notification_SYS-CLOSE.json  notification_SYS-MSG.json  request_ASYNC-CANCEL.json  request_ASYNC-RESUME.json  request_AUTH-INF.json  request_AUTH-WHOAMI.json  request_BCN-INF.json  request_BCN-PROPS.json  request_CLK-INF.json  request_CLK-LIST.json  request_CMD-DEL.json  request_CMD-INF.json  request_CMD-REQ.json  request_CMD-STATUS.json  request_CONN-INF.json  request_CONN-LIST.json  request_DEV-INF.json  request_DEV-LIST.json  request_DEV-LISTSUB.json  request_DEV-SUB.json  request_DEV-UNSUB.json  request_DOCK-INF.json  request_EXT-CFG.json  request_EXT-INF.json  request_EXT-LIST.json  request_EXT-LOAD.json  request_EXT-RELOAD.json  request_EXT-SETCFG.json  request_EXT-UNLOAD.json  request_LCN-INF.json  request_LOG-DATA.json  request_LOG-INF.json  request_OBJ-CMD.json  (+94 more)
doc/modules/ROOT/: nav.adoc
doc/protocol/: README.md  SUMMARY.md  definitions.md  devices.md  errors.md  general.md  index.md  security.md  synopsis.md  transport.md  types.md
doc/protocol/css/: extra.css
doc/protocol/messages/: README.md  ack.md  clk.md  cmd.md  conn.md  dev.md  index.md  sys.md  uav.md
etc/scripts/: json_schema_to_ts.mjs
flockwave/spec/: __init__.py  definitions.json  errors.py  ids.py  message.json  message_body.json  notification_ASYNC-RESP.json  notification_ASYNC-TIMEOUT.json  notification_CMD-RESP.json  notification_CMD-TIMEOUT.json  notification_OBJ-DEL.json  notification_SYS-CLOSE.json  notification_SYS-MSG.json  request_AUTH-INF.json  request_AUTH-REQ.json  request_AUTH-WHOAMI.json  request_CLK-INF.json  request_CLK-LIST.json  request_CMD-DEL.json  request_CMD-INF.json  request_CMD-REQ.json  request_CMD-STATUS.json  request_CONN-INF.json  request_CONN-LIST.json  request_DEV-INF.json  request_DEV-LIST.json  request_DEV-LISTSUB.json  request_DEV-SUB.json  request_DEV-UNSUB.json  request_DOCK-INF.json  request_EXT-CFG.json  request_EXT-INF.json  request_EXT-LIST.json  request_EXT-LOAD.json  request_EXT-RELOAD.json  request_EXT-SETCFG.json  request_EXT-UNLOAD.json  request_OBJ-CMD.json  request_OBJ-LIST.json  request_SHOW-CFG.json  (+56 more)
schema/: definitions.json  message.json  message_body.json  request_CONN-INF.json  request_CONN-LIST.json  request_SYS-VER.json  request_UAV-HALT.json  request_UAV-INF.json  request_UAV-LAND.json  request_UAV-LIST.json  request_UAV-RTH.json  response_ACK-ACK.json  response_ACK_NAK.json  response_CONN-INF.json  response_CONN-LIST.json  response_UAV-HALT.json  response_UAV-INF.json  response_UAV-LAND.json  response_UAV-LIST.json  response_UAV-RTH.json
src/flockwave/spec/: __init__.py  cli.py  definitions.json  errors.py  ids.py  memoize.py  message.json  message_body.json  notification_ASYNC-RESP.json  notification_ASYNC-ST.json  notification_ASYNC-TIMEOUT.json  notification_CONN-DEL.json  notification_OBJ-DEL.json  notification_SYS-CLOSE.json  notification_SYS-MSG.json  notification_body.json  request_ASYNC-CANCEL.json  request_ASYNC-RESUME.json  request_AUTH-INF.json  request_AUTH-REQ.json  request_AUTH-WHOAMI.json  request_BCN-INF.json  request_BCN-PROPS.json  request_CLK-INF.json  request_CLK-LIST.json  request_CONN-INF.json  request_CONN-LIST.json  request_DEV-INF.json  request_DEV-LIST.json  request_DEV-LISTSUB.json  request_DEV-SUB.json  request_DEV-UNSUB.json  request_DOCK-INF.json  request_EXT-CFG.json  request_EXT-INF.json  request_EXT-LIST.json  (+143 more)
test/: fixtures.py  test_examples.py  test_get_complex_object_schema.py  test_get_schema.py  test_invalid_requests.py  test_invalid_responses.py
types/: index.d.ts
(+122 files in other folders)
