[tool.poetry]
name = "flockwave-spec"
version = "1.79.2"
description = "JSON-Schema specification of the Flockwave protocol"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
license = "GPL-3.0-or-later"
packages = [{ include = "flockwave", from = "src" }]
include = ["src/flockwave/spec/*.json"]

[tool.poetry.dependencies]
python = "^3.9"
click = { version = "^8.1.4", optional = true }
jsonschema = { version = "^4.18.0", optional = true }
jsonpointer = "^2.4"
jsonref = "^1.1.0"
referencing = { version = "^0.29.1", optional = true }
deprecated = "^1.2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = { extras = ["toml"], version = "^7.2.7" }
pytest-cov = "^4.1.0"

[tool.poetry.extras]
validation = ["jsonschema", "referencing"]
cli = ["click", "jsonschema", "referencing"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.ruff]
ignore = ["B905", "C901", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["@abstractmethod", "@overload", "pragma: no cover"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
