[project]
name = "flockwave-spec"
version = "2.4.1"
description = "JSON-Schema specification of the Flockwave protocol"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = ["jsonpointer>=3.0", "jsonref>=1.1.0"]

[project.optional-dependencies]
validation = ["fastjsonschema>=2.20.0"]
cli = ["click>=8.1.4", "flockwave-spec[validation]"]

[dependency-groups]
dev = [
  "flockwave-spec[validation]",
  "pytest>=8.1.0",
  "coverage[toml]>=7.2.7",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["@abstractmethod", "@overload", "pragma: no cover"]

[build-system]
requires = ["uv_build>=0.8"]
build-backend = "uv_build"
